--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,41 +1,62 @@
 annotated-types==0.7.0
 anyio==4.4.0
-bcrypt==4.0.1
+blinker==1.4
 certifi==2024.7.4
-cffi==1.17.0
 click==8.1.7
-cryptography==43.0.0
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 dnspython==2.6.1
 email_validator==2.2.0
-fastapi==0.112.2
+exceptiongroup==1.2.2
 fastapi-cli==0.0.5
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.20.2
 httptools==0.6.1
 httpx==0.27.0
 idna==3.8
+importlib-metadata==4.6.4
+jeepney==0.7.1
 Jinja2==3.1.4
-jwt==1.3.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-passlib==1.7.4
-psycopg2-binary==2.9.9
-pycparser==2.22
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
-PyJWT==2.9.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu3
 python-dotenv==1.0.1
 python-multipart==0.0.9
-PyYAML==6.0.2
+PyYAML==5.4.1
 rich==13.7.1
+SecretStorage==3.3.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
+speedtest-cli==2.1.3
 starlette==0.38.2
+systemd-python==234
 typer==0.12.5
 typing_extensions==4.12.2
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 uvicorn==0.30.6
 uvloop==0.20.0
+wadllib==1.3.6
 watchfiles==0.23.0
 websockets==13.0
+zipp==1.0.0
